Changed: For changes in existing functionality.
Deprecated: For once-stable features removed in upcoming releases.
Removed: For features removed in this release.
Fixed: For any bug fixes.
Security: For vulnerabilities.

## [0.4.1] - in progress
### Added
- project parameter CoT justification
- automatic generation of CoT justification in OpenAI and Google AI models, as aditional prompt in same chat

## [0.4.0] - 2024-08-16
### Added
- full support for Google AI models
- support for RPM limits
- documentation for these new features
### Changed
- documentation website formatting and structure

## [0.3.2] - 2024-08-05
### Added
- support of GPT 4 Omni Mini model

## [0.3.1] - 2024-06-18
### Added
- in case of 'high' level of logging requested, log file named as project file
### Fixed
- documentation of the added feature

## [0.3] - 2024-06-17
### Added
- TPM limits support
- Documentation of this feature
### Fixed
- project.log saving in case of 'high' level of logging request

## [0.2] - 2024-05-29
### Added
- gpt-4o support & cost
- Technical FAQs
- Pages generation
### Fixed
- Cost minimization to include gpt-4o
- User manual

## [0.1.1] - 2024-05-21
### Fixed
- User Manual
- Readme

## [0.1.0] - 2024-05-16
### Added
- Input configuration file on command line
- Ouput file name form configuration file
- Tasks for building excutables
- Compiled executables for each OS and platform
### Fixed
- User Manual
- Moved log functions into main.go

## [Unreleased] - 2024-05-15
### Fixed
- Output to CSV
### Added
- Output to JSON

## [Unreleased] - 2024-05-13
### Added
- Configuration loading
- Cost assessement
- OpenAI API calls
- Output to CSV drafting

## [Unreleased] - 2024-05-03
### Added
- User manual placeholder
- Preliminary README
- Inheritance of cost module from testing project

## [Unreleased] - 2024-04-29
### Added
- Directory structure
- Test files structure

## [Unreleased] - 2024-04-22
### Added
- Changelog
- License