@@ -1,2 +1,3 @@
 File Name,bayesian approach,clustering,copulas,forecasting,geographical scale,historical data analysis,historical period studied,regression models
 lit_test,no,no,yes,yes,river basin,yes,1977 to 2017; 1970–1999; 2000–2017; 1980–2000; 1997–2017,yes
+lit_test_duplicate,no,no,yes,yes,river basin,yes,1977 to 2017; 1970–1999; 2000–2017; 1980–2000; 1997–2017,yes
