@@ -6,9 +6,10 @@ version = "0.2"
 [project.configuration]
 input_directory = "../projects/input/test" # where the .txt files are
 results_file_name = "../projects/output/test/output_test" # where results will be saved, the path must exists, file extension will be added
-output_format = "csv"  # Could be "csv" [default] or "json"
+output_format = "json"  # Could be "csv" [default] or "json"
 log_level = "low" # Could be "low" [default], "medium" showing entries on stdout, or "high" saving entries on file, see user manual for details
-cot_justification = "yes"
+cot_justification = "no" # Could be "yes" or "no" [default]. 
+duplication = "no" # Could be "yes" or "no" [default]. 
 
 [project.llm]
 provider = "GoogleAI" # Could be 'OpenAI' or 'GoogleAI'.
