@@ -8,7 +8,8 @@ input_directory = "/path/to/txt/files" # where the .txt files are
 results_file_name = "/path/to/save/results" # where results will be saved, the path must exists, file extension will be added
 output_format = "json"  # Could be "csv" [default] or "json"
 log_level = "low" # Could be "low" [default], "medium" showing entries on stdout, or "high" saving entries on file, see user manual for details
-cot_justification = "yes" # Could be "yes" or "no" [default]. It is the model justification in terms of chain of thought for the ansers provided.
+cot_justification = "no" # Could be "yes" or "no" [default]. It is the model justification in terms of chain of thought for the answers provided.
+duplication = "no" # Could be "yes" or "no" [default]. It duplicates the manuscripts to review, hence running model queries twice. It is a feature useful for debugging purposes.
 #batch_execution = "no"  # Could be "yes" or "no" [default]. Not yet implemented.
 
 [project.llm]
